@@ -60,6 +60,7 @@ static UWORD FuncImplemented[] = {
 	SQL_API_SQLCOLATTRIBUTE,	/* == SQL_API_SQLCOLATTRIBUTES */
 #endif
 	SQL_API_SQLCOLATTRIBUTES,
+	SQL_API_SQLCOLUMNPRIVILEGES,
 	SQL_API_SQLCOLUMNS,
 	SQL_API_SQLCONNECT,
 #ifdef SQL_API_SQLCOPYDESC
@@ -155,7 +156,6 @@ static UWORD FuncImplemented[] = {
 #ifdef SQL_API_SQLBULKOPERATIONS
 	SQL_API_SQLBULKOPERATIONS,
 #endif
-	SQL_API_SQLCOLUMNPRIVILEGES,
 	SQL_API_SQLDATASOURCES,
 	SQL_API_SQLDRIVERS,
 	SQL_API_SQLGETCURSORNAME,
